--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,7 +20,25 @@ jobs:
         cache: 'npm'
     - name: Install dependencies
       run: npm install
-    - name: Run Tests
+    - name: Run UNIT Tests
       run: npm run test:unit
     - name: Display Softuni Username
       run: echo "monstersbg"
+  build_and_test_UI:
+
+      runs-on: ubuntu-latest
+      needs: build_and_test_UNIT
+
+      steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js version 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      - name: Install playwright
+        run: npx playwright install
+      - name: Run UI Tests
+        run: npm run test:ui
