--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,5 +40,7 @@ jobs:
         run: npm install
       - name: Install playwright
         run: npx playwright install
+      - name: Start application
+        run: npm run start &
       - name: Run UI Tests
         run: npm run test:ui
