--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,6 +46,7 @@ jobs:
         run: npm run test:ui
   deploy:
       runs-on: ubuntu-latest
+      needs: build_and_test_UI
       steps:
         - name: Deploy to production
           uses: johnbeynon/render-deploy-action@v0.0.8
